export type Role = 'admin' | 'operator' | 'viewer';

export interface Tenant {
  id: string;
  slug: string;
  name: string;
  status: string;
  created_at?: string;
  updated_at?: string;
}

export interface TenantAccess {
  tenant_id: string;
  slug: string;
  name: string;
  role: Role;
  status: string;
  created_at?: string;
  updated_at?: string;
}

export interface TenantInput {
  slug?: string;
  name: string;
  status?: string;
}

export interface User {
  id: string;
  username: string;
  role: Role;
  platform_role?: string;
  status?: string;
  force_password_change?: boolean;
  created_at?: string;
  last_login_at?: string;
  active_tenant?: Tenant;
  tenants?: TenantAccess[];
}

export interface UserUpdateInput {
  reason: string;
  role?: Role;
  status?: string;
  force_password_change?: boolean;
}

export interface PasswordResetInput {
  reason: string;
  password: string;
  force_password_change?: boolean;
}

export interface OwnPasswordInput {
  reason: string;
  current_password: string;
  new_password: string;
}

export interface Session {
  token: string;
  user: User;
  expires_at: string;
}

export interface PrometheusStatus {
  configured: boolean;
  healthy: boolean;
  error?: string;
}

export interface SecurityEventTop {
  key: string;
  count: number;
  packets?: number;
  bytes?: number;
}

export interface SecurityEventSummary {
  window_seconds: number;
  total: number;
  top_sources: SecurityEventTop[];
  top_ports: SecurityEventTop[];
  by_decision: SecurityEventTop[];
}

export interface DashboardOverview {
  generated_at: string;
  prometheus: PrometheusStatus;
  traffic: { pps: number; bps: number; cps: number };
  decision_rates: Record<string, number>;
  security_events: SecurityEventSummary;
  agents: { total: number; stale: number };
  snapshot_version: number;
  latest_apply_status: ApplyStatus[];
}

export interface ApplyStatus {
  agent_id: string;
  hostname: string;
  policy_version: number;
  status: string;
  error_stage?: string;
  error_reason?: string;
  reported_at: string;
}

export interface AgentInterface {
  name: string;
  ifindex?: number;
  mac?: string;
  role?: string;
  link_speed_bps?: number;
}

export interface Service {
  id: string;
  ebpf_id: number;
  name: string;
  description?: string;
  backend_cidr: string;
  protocol: string;
  allowed_ports: number[];
  output_interface: string;
  owner: string;
  criticality: string;
  protection_mode: string;
  enabled: boolean;
  priority?: number;
  tags?: string[];
  sync_status: string;
  resolved_ifindex?: number;
  resolved_next_hop_mac?: string;
  resolved_src_mac?: string;
  neighbor_resolution_status: string;
  counters?: Record<string, number>;
  apply_status?: string;
}

export interface ServiceInput {
  reason: string;
  name: string;
  description?: string;
  backend_cidr: string;
  protocol: string;
  allowed_ports: number[];
  output_interface: string;
  owner: string;
  criticality: string;
  protection_mode: string;
  enabled?: boolean;
  priority?: number;
  tags?: string[];
  resolved_ifindex?: number;
  resolved_next_hop_mac?: string;
  resolved_src_mac?: string;
  neighbor_resolution_status?: string;
}

export interface Rule {
  id: string;
  ebpf_id: number;
  service_id?: string;
  name: string;
  action: string;
  mode: string;
  priority: number;
  match_expr?: Record<string, unknown>;
  threshold_pps?: number;
  threshold_bps?: number;
  threshold_cps?: number;
  dimension?: string;
  burst_packets?: number;
  burst_bytes?: number;
  sample_denom?: number;
  ttl_seconds?: number;
  expires_at?: string;
  confidence?: number;
  evidence?: Record<string, unknown>;
  enabled: boolean;
  owner: string;
  ttl_remaining_seconds?: number;
  counters?: Record<string, number>;
}

export interface RuleInput {
  reason: string;
  service_id?: string;
  name: string;
  priority?: number;
  match_expr?: Record<string, unknown>;
  action: string;
  mode: string;
  threshold_pps?: number;
  threshold_bps?: number;
  threshold_cps?: number;
  dimension?: string;
  burst_packets?: number;
  burst_bytes?: number;
  sample_denom?: number;
  ttl_seconds?: number;
  expires_at?: string;
  evidence?: Record<string, unknown>;
  confidence?: number;
  enabled?: boolean;
  owner: string;
}

export interface WhitelistInput {
  reason: string;
  cidr: string;
  scope: string;
  service_id?: string;
  label?: string;
  owner: string;
  priority?: number;
  expires_at?: string;
  enabled?: boolean;
}

export interface WhitelistEntry {
  id: string;
  ebpf_id: number;
  cidr: string;
  scope: string;
  service_id?: string;
  label?: string;
  reason?: string;
  owner: string;
  priority: number;
  expires_at?: string;
  enabled: boolean;
  created_at: string;
  updated_at: string;
}

export interface WhitelistFilters {
  q?: string;
  scope?: 'all' | 'global' | 'service';
  service_id?: string;
  state?: 'all' | 'enabled' | 'disabled';
  expiry?: 'all' | 'valid' | 'expired' | 'none';
}

export interface BlacklistInput {
  reason: string;
  cidr: string;
  score?: number;
  action: string;
  source: string;
  rule_id?: string;
  expires_at?: string;
  enabled?: boolean;
}

export interface BlacklistEntry {
  id: string;
  ebpf_id: number;
  cidr: string;
  score?: number;
  action: string;
  source: string;
  rule_id?: string;
  reason: string;
  expires_at?: string;
  enabled: boolean;
  created_at: string;
  updated_at: string;
}

export interface BlacklistEntryRow extends BlacklistEntry {
  source_name?: string;
  status?: string;
  origin: 'manual' | 'feed';
  editable: boolean;
}

export interface BlacklistFilters {
  q?: string;
  source?: string;
  origin?: 'all' | 'manual' | 'feed';
  state?: 'all' | 'enabled' | 'disabled';
  expiry?: 'all' | 'valid' | 'expired' | 'none';
}

export interface BlacklistEntriesPage {
  items: BlacklistEntryRow[];
  total: number;
  page: number;
  page_size: number;
}

export interface UDPSourcePortBlockInput {
  reason: string;
  port: number;
  label?: string;
  owner: string;
  expires_at?: string;
  enabled?: boolean;
}

export interface UDPSourcePortBlock {
  id: string;
  ebpf_id: number;
  port: number;
  label?: string;
  reason: string;
  owner: string;
  expires_at?: string;
  enabled: boolean;
  created_at: string;
  updated_at: string;
}

export interface UDPSourcePortBlockFilters {
  q?: string;
  state?: 'all' | 'enabled' | 'disabled';
  expiry?: 'all' | 'valid' | 'expired' | 'none';
}

export interface BaselineProfile {
  id: string;
  service_id: string;
  service_ebpf_id?: number;
  service_name?: string;
  interface: string;
  protocol: string;
  port?: number;
  window: string;
  expected_pps: number;
  expected_bps: number;
  expected_cps: number;
  history_hours: number;
  confidence: number;
  approved: boolean;
  status: string;
}

export interface AnomalyEvaluation {
  id: string;
  service_id?: string;
  service_ebpf_id?: number;
  service_name?: string;
  baseline_id?: string;
  evaluated_at: string;
  window: string;
  pps: number;
  bps: number;
  cps: number;
  drop_ratio: number;
  score: number;
  confidence: number;
  signals?: string[];
  recommendation: string;
  recommended_action: string;
  proposed_ttl_seconds?: number;
  proposed_rule_id?: string;
  auto_enforced: boolean;
  status: string;
  reason?: string;
  source?: string;
}

export interface Agent {
  id: string;
  hostname: string;
  status: string;
  xdp_mode: string;
  devmap_support: boolean;
  active_policy_version: number;
  last_seen_at?: string;
  stale: boolean;
  map_utilization?: Record<string, unknown>;
  interfaces?: AgentInterface[];
  latest_apply?: ApplyStatus;
}

export interface SecurityEvent {
  id: string;
  event_time: string;
  agent_id?: string;
  policy_version?: number;
  src_ip: string;
  src_prefix24: string;
  dst_ip: string;
  src_port?: number;
  dst_port?: number;
  protocol?: number;
  action?: number;
  reason?: number;
  service_id?: number;
  rule_id?: number;
  pkt_len?: number;
  sample_rate?: number;
}

export interface FeedSource {
  id: string;
  name: string;
  type: string;
  url?: string;
  credential_ref?: string;
  required_for_production: boolean;
  enabled: boolean;
  interval_seconds: number;
  license_note?: string;
  quota_metadata?: Record<string, unknown>;
  status: string;
  last_success_at?: string;
  last_error_at?: string;
  last_error?: string;
  next_run_at?: string;
  active_entries: number;
  conflict_count: number;
  parse_error_count: number;
  created_at?: string;
  updated_at?: string;
}

export interface FeedSourceInput {
  reason: string;
  name: string;
  type: string;
  url?: string;
  credential_ref?: string;
  required_for_production?: boolean;
  enabled?: boolean;
  interval_seconds?: number;
  license_note?: string;
  quota_metadata?: Record<string, unknown>;
  status?: string;
}

export interface FeedRun {
  id: string;
  source_id: string;
  source_name?: string;
  started_at: string;
  finished_at?: string;
  status: string;
  items_fetched: number;
  items_valid: number;
  parse_errors: number;
  error?: string;
  snapshot_version?: number;
}

export interface FeedConflict {
  id: string;
  source_id: string;
  source_name?: string;
  reputation_id: string;
  whitelist_id: string;
  reputation_cidr: string;
  whitelist_cidr: string;
  status: string;
  detected_at: string;
}

export interface TelegramConfig {
  bot_token_ref: string;
  bot_token_present: boolean;
  chat_id: string;
  parse_mode?: string;
  enabled: boolean;
  created_at: string;
  updated_at: string;
}

export interface TelegramConfigInput {
  reason: string;
  bot_token_ref: string;
  chat_id: string;
  parse_mode?: string;
  enabled?: boolean;
}

export interface AlertDelivery {
  id: string;
  alert_id: string;
  channel: string;
  status: string;
  attempt: number;
  error?: string;
  response?: Record<string, unknown>;
  created_at: string;
  sent_at?: string;
}

export interface Alert {
  id: string;
  severity: string;
  type: string;
  dedupe_key: string;
  service_id?: string;
  affected_service?: string;
  vector?: string;
  evidence?: Record<string, unknown>;
  recommended_action?: string;
  status: string;
  created_at: string;
  deliveries?: AlertDelivery[];
}

export interface SnapshotMetadata {
  version: number;
  checksum: string;
  object_checksum: string;
  rollback_from?: number;
  created_by?: string;
  created_at: string;
  snapshot?: Record<string, unknown>;
}

export interface SnapshotDiffValue {
  from: string;
  to: string;
  changed: boolean;
}

export interface SnapshotDiffItem {
  key: string;
  item: Record<string, unknown>;
}

export interface SnapshotDiffChange {
  key: string;
  before: Record<string, unknown>;
  after: Record<string, unknown>;
}

export interface SnapshotCollectionDiff {
  added: SnapshotDiffItem[];
  removed: SnapshotDiffItem[];
  changed: SnapshotDiffChange[];
  unchanged: number;
}

export interface SnapshotDiff {
  from_version: number;
  to_version: number;
  object_checksum: SnapshotDiffValue;
  runtime?: SnapshotDiffChange;
  services: SnapshotCollectionDiff;
  whitelist_v4: SnapshotCollectionDiff;
  blacklist_v4: SnapshotCollectionDiff;
  udp_source_port_blocks?: SnapshotCollectionDiff;
  rules: SnapshotCollectionDiff;
}

export interface AuditEvent {
  id: string;
  created_at: string;
  actor_id?: string;
  actor_username?: string;
  action: string;
  entity_type: string;
  entity_id: string;
  before?: Record<string, unknown>;
  after?: Record<string, unknown>;
  reason?: string;
  request_id?: string;
}

export interface DashboardData {
  overview: DashboardOverview;
  agents: Agent[];
  services: Service[];
  rules: Rule[];
  events: SecurityEvent[];
  baselines: BaselineProfile[];
  anomalies: AnomalyEvaluation[];
  feedSources: FeedSource[];
  feedRuns: FeedRun[];
  feedConflicts: FeedConflict[];
  telegramConfig: TelegramConfig;
  alerts: Alert[];
}
